--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>Hello Heaps</title>
+    <meta name=”viewport” content=”width=device-width, initial-scale=1″>
+    <title>Cardlink</title>
     <style>
         body { margin:0;padding:0;background-color:black; }
         canvas#webgl { width:100%;height:100%; } 
