--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <meta name=”viewport” content=”width=device-width, initial-scale=1″>
+    <meta name=”viewport” content=”width=500, initial-scale=1″>
     <title>Cardlink</title>
     <style>
         body { margin:0;padding:0;background-color:black; }
