--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE>
 <html>
 <head>
-    <meta charset="utf-8"/>
-    <meta name=”viewport” content=”width=300, initial-scale=1″>
-    <title>Cardlink</title>
-    <style>
-        body { margin:0;padding:0;background-color:black; }
-        canvas#webgl { width:100%;height:100%; } 
-    </style>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Cardlink</title>
+	<style>
+		body { margin:0;padding:0;background-color:black; }
+		canvas#webgl { width:100%;height:100%; } 
+	</style>
 </head>
 <body>
-    <canvas id="webgl"></canvas>
-    <script type="text/javascript" src="app.js"></script>
+	<canvas id="webgl"></canvas>
+	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
